<resources>
    <string name="app_name">Chat Application</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="mladen_username">username</string>
    <string name="mladen_register_button">REGISTER</string>
    <string name="mladen_login_button">LOGIN</string>
    <string name="mladen_password">password</string>
    <string name="mladen_last_name">Last Name</string>
    <string name="mladen_first_name">First Name</string>
    <string name="mladen_gender">gender</string>
    <string name="mladen_johndoe_gmail_com">johndoe@gmail.com</string>
    <string name="mladen_birth_date">Birth Date</string>
    <string name="mladen_accept_notifications">Accept Notifications</string>
    <string name="log_out_button">LOG OUT</string>
    <string name="my_friend">my friend</string>
    <string name="message_text">message text</string>
    <string name="send_button">SEND</string>
    <string name="sample_text">sample text</string>
    <string name="my_chat_list">My chat list</string>
    <string name="email_pattern"><![CDATA[^[a-zA-Z0-9.!#$%&\'*+/=?^_`{|}~-]+@((\\[[0-9]{1,3}\\.[0-9]{1,3}\\.[0-9]{1,3}\\.[0-9]{1,3}\\])|(([a-zA-Z\\-0-9]+\\.)+[a-zA-Z]{2,}))$]]></string>
    <string name="my_chat_list_contacts">My Chat List</string>

    <string name="connected_to">example</string>
    <string name="mladen_test">TEST</string>
    <string name="db_bracket">(</string>
    <string name="refresh">refresh</string>

    <string-array name="spinner_array">
        <item>MALE</item>
        <item>FEMALE</item>
    </string-array>
</resources>
