<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/first"
    tools:context="matic.mladen.chatapplication.MessageActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_to_send_to"
            android:layout_width="@dimen/mladen_250dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/malden_10dp"
            android:text="@string/connected_to"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/mladen_20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/message_activity_log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/message_activity_refresh"
            android:text="@string/log_out_button"
            android:textSize="@dimen/mladen_12sp" />

        <Button
            android:id="@+id/message_activity_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textSize="12sp"
            android:text="@string/refresh"/>

        <ListView
            android:id="@+id/list_of_messages"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@id/message_activity_send_button"
            android:layout_below="@id/message_activity_log_out"
            android:stackFromBottom="true"
            android:transcriptMode="alwaysScroll" />

        <EditText
            android:id="@+id/message_activity_message_text"
            android:layout_width="@dimen/mladen_250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:hint="@string/message_text"
            android:textSize="@dimen/mladen_12sp" />

        <Button
            android:id="@+id/message_activity_send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:enabled="false"
            android:text="@string/send_button"
            android:textSize="@dimen/mladen_12sp" />

    </RelativeLayout>

</LinearLayout>