<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="matic.mladen.chatapplication.RegisterActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/green_bam">

        <LinearLayout

            android:background="@color/transparent_pure_white_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mladen_25dp"
            android:layout_marginEnd="@dimen/mladen_25dp">

            <EditText
                android:id="@+id/register_activity_username"
                android:layout_width="@dimen/mladen_150dp"
                android:layout_height="@dimen/mladen_35dp"
                android:hint="@string/mladen_username"
                android:textSize="12sp"/>

            <EditText
                android:id="@+id/register_activity_first_name"
                android:layout_width="@dimen/mladen_150dp"
                android:layout_marginStart="@dimen/mladen_25dp"
                android:layout_height="@dimen/mladen_35dp"
                android:hint="@string/mladen_first_name"
                android:textSize="12sp"/>

        </LinearLayout>

        <LinearLayout
            android:background="@color/transparent_pure_white_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mladen_25dp"
            android:layout_marginEnd="@dimen/mladen_25dp"
            android:textSize="12sp">

            <EditText
                android:id="@+id/register_activity_password"
                android:layout_width="@dimen/mladen_150dp"
                android:layout_height="@dimen/mladen_35dp"
                android:hint="@string/mladen_password"
                android:inputType="textPassword"
                android:textSize="12sp"/>

            <EditText
                android:id="@+id/register_activity_last_name"
                android:layout_width="@dimen/mladen_150dp"
                android:layout_height="@dimen/mladen_35dp"
                android:layout_marginStart="@dimen/mladen_25dp"
                android:hint="@string/mladen_last_name"
                android:textSize="12sp"/>



        </LinearLayout>

        <LinearLayout
            android:background="@color/transparent_pure_white_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mladen_25dp"
            android:layout_marginEnd="@dimen/mladen_25dp">

            <EditText
                android:id="@+id/register_activity_email"
                android:layout_width="@dimen/mladen_150dp"
                android:layout_height="@dimen/mladen_35dp"
                android:inputType="textEmailAddress"
                android:hint="@string/mladen_johndoe_gmail_com"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mladen_gender"
                android:padding="@dimen/malden_10dp"
                android:textSize="12sp"/>

            <Spinner
                android:id="@+id/register_activity_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/spinner_array"
                android:textSize="12sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:textColorHint="@color/pure_white"
                android:textColor="@color/pure_white"
                android:textColorHighlight="@color/pure_white"
                android:shadowColor="@color/pure_white"
                android:textColorLink="@color/pure_white"
                android:id="@+id/register_activity_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/mladen_25dp"
                android:textSize="12sp"
                android:text="@string/mladen_accept_notifications"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/mladen_25dp"
            android:orientation="vertical">

            <TextView
                android:textColor="@color/pure_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mladen_birth_date"
                android:textSize="12sp"/>

            <CalendarView
                android:background="@color/translucent_pure_white"
                android:id="@+id/register_activity_calendar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/mladen_250dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/register_activity_register_button"
            android:background="@color/transparent_pure_white_2"
            android:textColorHint="@color/transparent_pure_white"
            android:layout_width="@dimen/mladen_200dp"
            android:layout_height="wrap_content"
            android:text="@string/mladen_register_button"
            android:textSize="12sp"
            android:layout_gravity="center"
            android:enabled="false"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
