<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="matic.mladen.chatapplication.MainActivity">

    <LinearLayout
        android:id="@+id/background_image_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/branch">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:layout_margin="@dimen/mladen_50dp"
            android:orientation="vertical">

            <EditText
                android:textColor="@color/pure_white"
                android:shadowColor="@color/pure_white"
                android:textColorHint="@color/pure_white"
                android:textColorHighlight="@color/pure_white"
                android:textColorLink="@color/pure_white"
                android:id="@+id/edit_text_username"
                android:layout_width="match_parent"
                android:layout_height="@dimen/mladen_40dp"
                android:hint="@string/mladen_username"/>

            <EditText
                android:textColor="@color/pure_white"
                android:shadowColor="@color/pure_white"
                android:textColorHint="@color/pure_white"
                android:textColorHighlight="@color/pure_white"
                android:textColorLink="@color/pure_white"
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/mladen_40dp"
                android:inputType="textPassword"
                android:hint="@string/mladen_password"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="@dimen/mladen_55dp"
            android:paddingEnd="@dimen/mladen_25dp">

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:enabled="false"
                android:background="@drawable/responsive_buttons"
                android:textColor="@color/pure_white"
                android:text="@string/mladen_login_button"/>

            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/responsive_buttons"
                android:textColor="@color/pure_white"
                android:layout_margin="25dp"
                android:text="@string/mladen_register_button"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
